# university-sis-assignment

./: .gitignore  BUILDING_GUIDE.md  CMakeLists.txt  CURSOR_REPLICATION_PROMPT.md  DOCUMENTATION_OVERVIEW.md  FEATURES_DOCUMENTATION.md  FEATURES_QUICK_REFERENCE.md  FEATURE_CHECKLIST.md  QUICK_START_TEMPLATE.md  README.md  test.csv  university-sis-assignment.sln  university-sis-assignment.slnx  university-sis-assignment.vcxproj  university-sis-assignment.vcxproj.filters
university-sis/: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
university-sis/database/: databasemanager.cpp  databasemanager.h  schema.sql
university-sis/modules/academic/: courserepository.cpp  courserepository.h  section.h  sectionrepository.cpp  sectionrepository.h
university-sis/modules/attendance/: attendance.h  attendancerepository.cpp  attendancerepository.h
university-sis/modules/enrollment/: enrollment.h  enrollmentrepository.cpp  enrollmentrepository.h
university-sis/modules/facility/: building.h  facilityrepository.cpp  facilityrepository.h  room.h
university-sis/modules/faculty/: faculty.h  facultyrepository.cpp  facultyrepository.h
university-sis/modules/finance/: payment.h  paymentrepository.cpp  paymentrepository.h
university-sis/ui/: basesystemwidget.cpp  studentportal.cpp  studentportal.h
university-sis/ui/academic/: academicsystem.cpp  academicsystem.h  coursedialog.cpp  coursedialog.h  sectiondialog.cpp  sectiondialog.h  sectionsystem.cpp  sectionsystem.h
university-sis/ui/attendance/: attendancedialog.cpp  attendancedialog.h  attendancesystem.cpp  attendancesystem.h
university-sis/ui/calendar/: calendarsystem.cpp  calendarsystem.h
university-sis/ui/enrollment/: enrollmentdialog.cpp  enrollmentdialog.h  enrollmentsystem.cpp
university-sis/ui/facility/: facilitysystem.cpp
university-sis/ui/faculty/: facultydialog.cpp  facultydialog.h
university-sis/ui/finance/: financesystem.cpp
university-sis/ui/grades/: gradessystem.cpp  gradessystem.h
university-sis/ui/login/: logindialog.cpp  logindialog.h
university-sis/ui/news/: newssystem.cpp  newssystem.h
university-sis/ui/profile/: profilewidget.cpp
university-sis/ui/reports/: reportssystem.cpp  reportssystem.h
university-sis/ui/student/: studentdialog.h
university-sis/university-sis/university-sis/: mainwindow.h
university-sis/university-sis/university-sis/modules/academic/: course.h
university-sis/university-sis/university-sis/modules/enrollment/: enrollment.h  enrollmentrepository.cpp
university-sis/university-sis/university-sis/modules/facility/: facilityrepository.cpp  facilityrepository.h
university-sis/university-sis/university-sis/modules/faculty/: facultyrepository.cpp
university-sis/university-sis/university-sis/modules/finance/: paymentrepository.cpp
university-sis/university-sis/university-sis/modules/student/: student.h  studentrepository.cpp  studentrepository.h
university-sis/university-sis/university-sis/ui/: basesystemwidget.h
university-sis/university-sis/university-sis/ui/academic/: academicsystem.cpp  coursedialog.cpp
university-sis/university-sis/university-sis/ui/enrollment/: enrollmentsystem.cpp  enrollmentsystem.h
university-sis/university-sis/university-sis/ui/facility/: buildingdialog.cpp  buildingdialog.h  facilitysystem.h  roomdialog.cpp  roomdialog.h
university-sis/university-sis/university-sis/ui/faculty/: facultysystem.cpp  facultysystem.h
university-sis/university-sis/university-sis/ui/finance/: financesystem.h  paymentdialog.cpp  paymentdialog.h
university-sis/university-sis/university-sis/ui/login/: logindialog.cpp
university-sis/university-sis/university-sis/ui/news/: newssystem.h
university-sis/university-sis/university-sis/ui/profile/: profilewidget.h
university-sis/university-sis/university-sis/ui/student/: studentdialog.cpp
university-sis/university-sis/university-sis/utils/: thememanager.h
university-sis/utils/: thememanager.cpp
